# src/main/java/com/example/springcore/controller/TrainerApi.java
@@ -4,11 +4,6 @@ import com.example.springcore.dto.TrainerDTO;
 import com.example.springcore.dto.TrainerWithTraineesDTO;
 import com.example.springcore.dto.TrainingDTO;
 import com.example.springcore.dto.UserCredentialsDTO;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.media.ArraySchema;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -28,33 +23,18 @@ public interface TrainerApi {
     @PostMapping
     ResponseEntity<UserCredentialsDTO> createTrainer(@Valid @RequestBody TrainerDTO trainerDTO);
 
-    @Operation(summary = "Get trainer by username")
-    @ApiResponse(responseCode = "200", description = "Successful operation",
-            content = @Content(
-                    mediaType = "application/json",
-                    schema = @Schema(implementation = TrainerWithTraineesDTO.class))
-    )
     @GetMapping
-    ResponseEntity<TrainerWithTraineesDTO> getTrainerByUsername(@Valid @RequestParam(value = "username") String username);
+    ResponseEntity<TrainerWithTraineesDTO> getTrainerByUsername(@RequestParam String username);
 
-    @Operation(summary = "Update trainer")
-    @io.swagger.v3.oas.annotations.parameters.RequestBody(description = "New trainer details", required = true,
-            content = @Content(schema = @Schema(implementation = TrainerDTO.class)))
-    @ApiResponse(responseCode = "200", description = "Trainer updated successfully",
-            content = @Content(schema = @Schema(implementation = TrainerWithTraineesDTO.class)))
     @PutMapping
     ResponseEntity<TrainerWithTraineesDTO> updateTrainer(@Valid @RequestBody TrainerDTO trainerDTO);
 
-    @Operation(summary = "Get trainer trainings by criteria")
-    @ApiResponse(responseCode = "200", description = "Successful operation",
-            content = @Content(array = @ArraySchema(schema = @Schema(implementation = TrainingDTO.class))))
     @GetMapping("/trainings")
     ResponseEntity<List<TrainingDTO>> getTrainerTrainingsByCriteria(
             @RequestParam String username,
             @RequestParam(required = false) LocalDate fromDate,
             @RequestParam(required = false) LocalDate toDate,
             @RequestParam(required = false) String traineeUsername);
-
 
     @PatchMapping
     ResponseEntity<Void> changeTrainerStatus(@RequestParam String username, @RequestParam boolean isActive);
